PN-1526: integrazione con IO per attivazione/disattivazione
