# docs/openapi/pn-io-message-v1.yaml
@@ -11,9 +11,9 @@ servers:
     description: placeholder
 tags:
   - name: IO
-    description: Informazioni sullo stato del pagamento
+    description: Integrazione con IO
 paths:
-  /ext-registry/io/v1/sendmessage:
+  /ext-registry-private/io/v1/sendmessage:
     post:
       operationId: sendIOMessage
       summary: Send message to APPIO
@@ -43,6 +43,93 @@ paths:
           description: Internal Server Error
           content:
             application/problem+json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
+  /ext-registry-private/io/v1/activations:
+    post:
+      operationId: getServiceActivationByPOST
+      summary: Get a Service Activation for a User
+      description: Returns the current Activation for a couple Service/User
+      tags:
+        - IOActivation
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/FiscalCodePayload'
+        required: true
+      responses:
+        '200':
+          description: Found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Activation'
+                examples:
+                  application/json:
+                    serviceId: AAAAAAAAAAAAAAA
+                    fiscalCode: AAAAAA00B00C000D
+                    status: ACTIVE
+                    version: 1
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden.
+        '404':
+          description: No user activation found for the provided fiscal code.
+          content:
+            application/json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
+        '429':
+          description: Too many requests
+        '500':
+          description: Internal server error retrieving the Activation
+          content:
+            application/json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
+    put:
+      operationId: upsertServiceActivation
+      summary: Upsert a Service Activation for a User
+      description: Create or update an Activation for a couple Service/User
+      tags:
+        - IOActivation
+      requestBody:
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ActivationPayload'
+        required: true
+      responses:
+        '200':
+          description: Found.
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Activation'
+                examples:
+                  application/json:
+                    serviceId: AAAAAAAAAAAAAAA
+                    fiscalCode: AAAAAA00B00C000D
+                    status: ACTIVE
+                    version: 1
+        '401':
+          description: Unauthorized
+        '403':
+          description: Forbidden.
+        '404':
+          description: No user activation found for the provided fiscal code.
+          content:
+            application/json:
+              schema:
+                $ref: 'pn-errors.yaml#/components/schemas/Problem'
+        '429':
+          description: Too many requests
+        '500':
+          description: The activation cannot be created or updated
+          content:
+            application/json:
               schema:
                 $ref: 'pn-errors.yaml#/components/schemas/Problem'
 components:
@@ -91,3 +178,45 @@ components:
         id:
           type: string
           description: identifier of the created message.
+    ActivationStatus:
+      type: string
+      enum:
+        - ACTIVE
+        - INACTIVE
+        - PENDING
+    Activation:
+      type: object
+      properties:
+        fiscal_code:
+          $ref: '#/components/schemas/FiscalCode'
+        status:
+          $ref: '#/components/schemas/ActivationStatus'
+        version:
+          type: integer
+          minimum: 0
+      required:
+        - fiscal_code
+        - status
+        - version
+    ActivationPayload:
+      type: object
+      properties:
+        fiscal_code:
+          $ref: '#/components/schemas/FiscalCode'
+        status:
+          $ref: '#/components/schemas/ActivationStatus'
+      required:
+        - fiscal_code
+        - status
+    FiscalCodePayload:
+      type: object
+      properties:
+        fiscal_code:
+          $ref: '#/components/schemas/FiscalCode'
+      required:
+        - fiscal_code
+    FiscalCode:
+      type: string
+      description: User's fiscal code.
+      format: FiscalCode
+      example: SPNDNL80R13C555X
